gccida/c2/output_constructor
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5158:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5199:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *size_unit; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5206:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v54; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5207:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v55; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5208:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v56; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5209:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v57; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5210:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v58; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5211:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v59; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5223:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *t; // [rsp+30h] [rbp-48h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5272:23: error: expected expression
values = ( tree_node *)high[3]; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5272:12: error: use of undeclared identifier 'tree_node'
values = ( tree_node *)high[3]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5334:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_text ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5355:49: error: use of undeclared identifier 'off_71EE08'
fprintf( ( FILE *)asm_out_file, ( const char *)&off_71EE08 + 4, "\t.zero\t", ( unsigned int)v27); 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5400:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_text ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5416:49: error: use of undeclared identifier 'off_71EE08'
fprintf( ( FILE *)asm_out_file, ( const char *)&off_71EE08 + 4, "\t.zero\t", ( unsigned int)length); 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5578:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_text ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5600:49: error: use of undeclared identifier 'off_71EE08'
fprintf( ( FILE *)asm_out_file, ( const char *)&off_71EE08 + 4, "\t.zero\t", ( unsigned int)v50); 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5625:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_text ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/varasm.c:5641:49: error: use of undeclared identifier 'off_71EE08'
fprintf( ( FILE *)asm_out_file, ( const char *)&off_71EE08 + 4, "\t.zero\t", ( unsigned int)v15); 
                                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constructor/src/obj/varasm.o] Error 1
